# hex6-bot

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  app.py  build.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
configs/: README.md  colab.toml  colab_efficiency_queue.toml  colab_hour.toml  colab_job_queue.toml  colab_strongest_v2.toml  default.toml  fast.toml  fast_19.toml  fast_25.toml  local_16h_best.toml  local_4h_strongest.toml  local_4h_strongest_v2.toml  local_4h_strongest_v2_gumbel.toml  play.toml
docs/: 5-hour-sprint.md  ai-agent-workflows.md  alphazero-20-cycle-report.md  alphazero-cycle-story.md  architecture.md  archive.md  board-size-ablation.md  codex-orchestration.md  colab.md  current-state.md  engine-comparison.md  engine-upgrade-tickets.md  executive-review.md  experiment-report.md  game-exploration.md  index.md  lit-vs-prelit-20m.md  literature-improvements.md  literature-roadmap.md  model-journey.md  next-experiment-options.md  omni-model-report.md  open-source-checklist.md  overnight-4h-result.md  performance-roadmap.md  project-memory.md  roadmap.md  strongest-v2-ab.md  tools.md  vercel.md  vscode-colab-extension.md
notebooks/: hex6_colab_fast_bootstrap.ipynb  hex6_colab_vscode_launch.ipynb
scripts/: autopilot_cycle_tick.ps1  autopilot_daemon.ps1  autopilot_status.ps1  build_cycle_story.ps1  build_executive_review.ps1  build_omni_model_report.py  build_transfer_bundle.ps1  colab_run.py  ensure_autopilot_daemon.ps1  hourly_checkin.ps1  one_hour_checkin.ps1  profile_hex6.py  run_board_eval_ablation.py  run_competitive_eval.ps1  setup_automation_tasks.ps1  start_colab_status_watch.ps1  start_local_web_app.ps1  start_tracked_bootstrap_smoke.ps1  start_yolo_autopilot.ps1  stop_local_heavy_jobs.ps1
status/: latest.json
tests/: test_arena.py  test_bootstrap.py  test_candidate_explorer.py  test_colab_gpu.py  test_config_loader.py  test_config_variants.py  test_encoder.py  (+13 more)
(+62 files in other folders)
