[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "hex6-bot"
version = "0.1.0"
description = "Research scaffold for a modular hexagonal 6-in-a-row bot."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "flask>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.11",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.vercel.scripts]
build = "python build.py"
